# self-meta-platform

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  capacitor.config.ts  design-qa.md  next.config.js  next.config.ts  package-lock.json  package.json  test-age-band-engine.ts  test-age-norm.ts  test-ai-case-2.ts  test-ai-final.ts  test-ai-raw.ts  test-ai-report.ts  test-single-case.ts  tsconfig.activity-lab.json  tsconfig.education-network-policy-tests.json  tsconfig.education-network-updater.json  tsconfig.json  tsconfig.report-runner.json  tsconfig.security-scripts.json
RAG/: Pro RAG.docx  (+1 more)
services/video-observation-mvp/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/video-observation-mvp/app/: __init__.py  main.py
services/video-observation-mvp/app/api/: __init__.py  routes.py
services/video-observation-mvp/app/core/: __init__.py  config.py  database.py
services/video-observation-mvp/app/models/: __init__.py  entities.py
services/video-observation-mvp/app/rules/: free_play_v1.yaml
services/video-observation-mvp/data/: video_observation_mvp.db
services/video-observation-mvp/dna_video_observation_mvp.egg-info/: PKG-INFO  SOURCES.txt
services/video-observation-mvp/fixtures/: demo_session.json
services/video-observation-mvp/scripts/: download_mediapipe_models.py  run_container_smoke.py  run_fixture_demo.py  run_real_video_smoke.py
services/video-observation-mvp/selfmeta_video_observation_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/video-observation-mvp/tests/: test_api.py  test_pipeline.py
(+963 files in other folders)
